--- a/iChat/Base.lproj/Main.storyboard
+++ b/iChat/Base.lproj/Main.storyboard
@@ -299,6 +299,9 @@
                                         <segment title="My Country"/>
                                         <segment title="All"/>
                                     </segments>
+                                    <connections>
+                                        <action selector="filterSegmentValueChanged:" destination="7yY-id-vGW" eventType="valueChanged" id="jS4-ip-t13"/>
+                                    </connections>
                                 </segmentedControl>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -353,7 +356,161 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Txz-z5-t7V" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5648.8000000000002" y="-1558.4707646176912"/>
+            <point key="canvasLocation" x="5601" y="-1219"/>
+        </scene>
+        <!--Profile View Table View Controller-->
+        <scene sceneID="35U-Ho-Euu">
+            <objects>
+                <tableViewController storyboardIdentifier="profileView" id="OmH-sq-vs1" customClass="ProfileViewTableViewController" customModule="iChat" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="uV1-5o-gi9">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <sections>
+                            <tableViewSection headerTitle="Section-1" id="PN1-zM-5E2">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="100" id="uxT-vg-322">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="100"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="uxT-vg-322" id="vVg-PV-o5h">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatarPlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="Yci-cM-qng">
+                                                    <rect key="frame" x="16" y="10" width="80" height="79"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="80" id="5V0-qy-Jpu"/>
+                                                        <constraint firstAttribute="height" constant="79" id="Uiz-dh-v4B"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Full Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yc4-0T-vcd">
+                                                    <rect key="frame" x="104" y="16" width="255" height="24"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="24" id="XoT-9r-iI1"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone No" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KeC-RI-OmS">
+                                                    <rect key="frame" x="104" y="54" width="255" height="24"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="28" id="rCO-sf-iqL"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="Yci-cM-qng" secondAttribute="bottom" constant="10" id="1Wf-4X-wUa"/>
+                                                <constraint firstItem="KeC-RI-OmS" firstAttribute="leading" secondItem="Yci-cM-qng" secondAttribute="trailing" constant="8" id="4QL-F8-IcJ"/>
+                                                <constraint firstItem="Yci-cM-qng" firstAttribute="leading" secondItem="vVg-PV-o5h" secondAttribute="leading" constant="16" id="Gls-Wy-b6q"/>
+                                                <constraint firstItem="Yc4-0T-vcd" firstAttribute="leading" secondItem="Yci-cM-qng" secondAttribute="trailing" constant="8" id="IlX-dB-Jt4"/>
+                                                <constraint firstAttribute="trailing" secondItem="Yc4-0T-vcd" secondAttribute="trailing" constant="16" id="KHb-fr-ko0"/>
+                                                <constraint firstItem="Yc4-0T-vcd" firstAttribute="top" secondItem="vVg-PV-o5h" secondAttribute="top" constant="16" id="LVj-vs-QiL"/>
+                                                <constraint firstItem="Yci-cM-qng" firstAttribute="top" secondItem="vVg-PV-o5h" secondAttribute="top" constant="10" id="QxP-no-FQD"/>
+                                                <constraint firstAttribute="trailing" secondItem="KeC-RI-OmS" secondAttribute="trailing" constant="16" id="ZFl-5v-Ixg"/>
+                                                <constraint firstAttribute="bottom" secondItem="KeC-RI-OmS" secondAttribute="bottom" constant="16" id="b98-26-a1T"/>
+                                                <constraint firstItem="KeC-RI-OmS" firstAttribute="top" secondItem="Yc4-0T-vcd" secondAttribute="bottom" constant="14" id="rmK-Wb-hY2"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                            <tableViewSection headerTitle="Section-2" id="hfs-XQ-Joi">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="65" id="OIE-c8-CSx">
+                                        <rect key="frame" x="0.0" y="156" width="375" height="65"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="OIE-c8-CSx" id="ar4-gK-tYF">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="64.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dgN-4U-xcC">
+                                                    <rect key="frame" x="172.5" y="7.5" width="30" height="50"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="FWI-Ix-dJe"/>
+                                                        <constraint firstAttribute="height" constant="50" id="T8e-3t-8cd"/>
+                                                    </constraints>
+                                                </view>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qbb-r5-raC">
+                                                    <rect key="frame" x="211" y="17.5" width="164" height="30"/>
+                                                    <state key="normal" image="message"/>
+                                                    <connections>
+                                                        <action selector="messageTapped:" destination="OmH-sq-vs1" eventType="touchUpInside" id="bM0-mR-ELl"/>
+                                                    </connections>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hlN-IP-4lx">
+                                                    <rect key="frame" x="0.0" y="17.5" width="165" height="30"/>
+                                                    <state key="normal" image="call"/>
+                                                    <connections>
+                                                        <action selector="callTapped:" destination="OmH-sq-vs1" eventType="touchUpInside" id="C16-Hg-wU0"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="dgN-4U-xcC" firstAttribute="centerX" secondItem="ar4-gK-tYF" secondAttribute="centerX" id="9rC-eI-MTl"/>
+                                                <constraint firstItem="dgN-4U-xcC" firstAttribute="leading" secondItem="hlN-IP-4lx" secondAttribute="trailing" constant="7.5" id="AFD-RE-Zeh"/>
+                                                <constraint firstItem="qbb-r5-raC" firstAttribute="leading" secondItem="dgN-4U-xcC" secondAttribute="trailing" constant="8.5" id="bBy-ip-j8u"/>
+                                                <constraint firstItem="dgN-4U-xcC" firstAttribute="centerY" secondItem="ar4-gK-tYF" secondAttribute="centerY" id="f33-Ci-g55"/>
+                                                <constraint firstItem="hlN-IP-4lx" firstAttribute="leading" secondItem="ar4-gK-tYF" secondAttribute="leading" id="iuy-Pl-dvE"/>
+                                                <constraint firstItem="hlN-IP-4lx" firstAttribute="centerY" secondItem="ar4-gK-tYF" secondAttribute="centerY" id="mkL-JU-p3q"/>
+                                                <constraint firstItem="qbb-r5-raC" firstAttribute="centerY" secondItem="ar4-gK-tYF" secondAttribute="centerY" id="qa7-DG-oxh"/>
+                                                <constraint firstAttribute="trailing" secondItem="qbb-r5-raC" secondAttribute="trailing" id="xrZ-1F-cuC"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                            <tableViewSection headerTitle="Section-3" id="FkJ-B1-ecb">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="sMK-Q9-wfg">
+                                        <rect key="frame" x="0.0" y="249" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="sMK-Q9-wfg" id="XID-D9-8xa">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yvb-pe-cx0">
+                                                    <rect key="frame" x="16" y="6" width="343" height="30"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <color key="tintColor" red="1" green="0.12698416409999999" blue="0.1739655876" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <state key="normal" title="Block User"/>
+                                                    <connections>
+                                                        <action selector="blockTapped:" destination="OmH-sq-vs1" eventType="touchUpInside" id="gTb-eJ-nqd"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Yvb-pe-cx0" firstAttribute="top" secondItem="XID-D9-8xa" secondAttribute="top" constant="6" id="14d-k0-d67"/>
+                                                <constraint firstAttribute="trailing" secondItem="Yvb-pe-cx0" secondAttribute="trailing" constant="16" id="5TJ-ju-JJG"/>
+                                                <constraint firstItem="Yvb-pe-cx0" firstAttribute="leading" secondItem="XID-D9-8xa" secondAttribute="leading" constant="16" id="gK6-7O-hHj"/>
+                                                <constraint firstAttribute="bottom" secondItem="Yvb-pe-cx0" secondAttribute="bottom" constant="7.5" id="mx0-cG-8De"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="OmH-sq-vs1" id="dsI-6W-A1o"/>
+                            <outlet property="delegate" destination="OmH-sq-vs1" id="94k-H5-k7t"/>
+                        </connections>
+                    </tableView>
+                    <connections>
+                        <outlet property="avatarImage" destination="Yci-cM-qng" id="UmD-b3-Z7p"/>
+                        <outlet property="blockButtonOutlet" destination="Yvb-pe-cx0" id="u8t-ja-aVE"/>
+                        <outlet property="callButtonOutlet" destination="hlN-IP-4lx" id="xok-aI-BJb"/>
+                        <outlet property="fullNameLabel" destination="Yc4-0T-vcd" id="xsd-fN-qRZ"/>
+                        <outlet property="messageButtonOutlet" destination="qbb-r5-raC" id="1Va-ce-yYl"/>
+                        <outlet property="phoneNoLabel" destination="KeC-RI-OmS" id="Ytc-KK-tI0"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cc9-Fs-1CE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6509.6000000000004" y="-1219.3403298350825"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="hLa-X0-mtX">
@@ -478,7 +635,9 @@
     </scenes>
     <resources>
         <image name="avatarPlaceholder" width="101" height="101"/>
+        <image name="call" width="30" height="30"/>
         <image name="chat" width="25" height="25"/>
+        <image name="message" width="30" height="30"/>
         <image name="settings" width="25" height="25"/>
     </resources>
 </document>
